Updated angle positions to be correct trajectory

--- a/leo_config.yaml
+++ b/leo_config.yaml
@@ -80,7 +80,7 @@ control:
     rc_in3: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0]
     rc_in2: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0]
     rc_in1: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.5, 0.5, 0.5, 0.5,  0.0, 0.0, 0.0, 0.0]
-    bias: [0.0, 1.5707963268, 0.0, 1.5707963268,  0.0, 0.0, 0.0, 0.0,  0.5, 0.5, 0.5, 0.5,  0.0, 0.0, 0.0, 0.0]
+    bias: [0.5487384796142578, 1.315904974937439, 1.0643084049224854, 1.550581932067871, -0.2320578694343567, 0.0, -0.27582669258117676, 0.0, 0.5, 0.5, 0.5, 0.5,  0.0, 0.0, 0.0, 0.0]
     yaw: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  -47811, 47811, 47811, -47811,  0.0, 0.0, 0.0, 0.0]
     pitch: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  6813, 6813, -6813, -6813,  0.0, 0.0, 0.0, 0.0]
     roll: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  9805, -9805, 9805, -9805,  0.0, 0.0, 0.0, 0.0]
@@ -89,17 +89,17 @@ control:
     I_out_limit: 1.000000000
     Kd: 0.000000000
     Ki: 0.000000000
-    Kp: 0.000000000
+    Kp: 1
   pid_pitch_controller:
     I_out_limit: 0.500000000
-    Kd: 0.0001000
+    Kd: 0.0000000
     Ki: 0.00000
-    Kp: 0.0000
+    Kp: 4
   pid_roll_controller:
     I_out_limit: 1.000000000
-    Kd: 0.000000000
+    Kd: 0.00100000
     Ki: 0.00000000
-    Kp: 0.0000000
-  yaw_low_pass_cutoff: 50.000000000
-  pitch_low_pass_cutoff: 50.000000000
-  roll_low_pass_cutoff: 50.000000000
+    Kp: 3
+  yaw_low_pass_cutoff: 10.000000000
+  pitch_low_pass_cutoff: 10.000000000
+  roll_low_pass_cutoff: 10.000000000
