Added magnetic IMU

--- a/leo_config.yaml
+++ b/leo_config.yaml
@@ -80,7 +80,7 @@ control:
     rc_in3: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0]
     rc_in2: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0]
     rc_in1: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  0.5, 0.5, 0.5, 0.5,  0.0, 0.0, 0.0, 0.0]
-    bias: [0.5487384796142578, 1.315904974937439, 1.0643084049224854, 1.550581932067871, -0.2320578694343567, 0.0, -0.27582669258117676, 0.0, 0.5, 0.5, 0.5, 0.5,  0.0, 0.0, 0.0, 0.0]
+    bias: [0.7, 0.7, 0.7, 0.7, 0.0, 0.0, 0.0, 0.0, 0.5, 0.5, 0.5, 0.5,  0.0, 0.0, 0.0, 0.0]
     yaw: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  -47811, 47811, 47811, -47811,  0.0, 0.0, 0.0, 0.0]
     pitch: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  6813, 6813, -6813, -6813,  0.0, 0.0, 0.0, 0.0]
     roll: [0.0, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0, 0.0,  9805, -9805, 9805, -9805,  0.0, 0.0, 0.0, 0.0]
